update quick start docs

--- a/docs/advanced.ipynb
+++ b/docs/advanced.ipynb
@@ -5,7 +5,7 @@
    "id": "5642ace5-fcab-4ca8-a96c-dcd7b3d51eb2",
    "metadata": {},
    "source": [
-    "# Advanced\n",
+    "# Advanced Config\n",
     "\n",
     "This page details the more advanced `HyperOptimizer` options.\n",
     "\n",
