--- a/docs/basics.ipynb
+++ b/docs/basics.ipynb
@@ -5,7 +5,7 @@
    "id": "9c8e1ba6-6b35-4dec-830e-686299698e2b",
    "metadata": {},
    "source": [
-    "# Basics"
+    "# Optimizer Basics"
    ]
   },
   {
@@ -492,7 +492,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "F=3.67 C=4.51 S=8.39 P=9.90: 100%|██████████| 128/128 [00:01<00:00, 82.14it/s]\n"
+      "F=3.67 C=4.51 S=8.39 P=9.90: 100%|██████████| 128/128 [00:01<00:00, 74.86it/s]\n"
      ]
     },
     {
@@ -646,7 +646,44 @@
     "\n",
     "## Quick-start\n",
     "\n",
-    "If you just want to get going, the following illustrate some common customizations of the optimizers."
+    "If you just want to get going, the following presets are recommended:\n",
+    "\n",
+    "- `optimize='auto'`, as a decent all rounder.\n",
+    "- `optimize='auto-hq'`, for contractions which you think might be hard, or will be repeated many times.\n",
+    "- `optimize='random-greedy-128'`, for very large networks (many thousands of tensors), or very large numbers of different networks. Heavily accelerated by `cotengrust`.\n",
+    "\n",
+    "\n",
+    "Beyond those, the following illustrate some common customizations of the full optimizer interface:\n",
+    "\n",
+    "\n",
+    "### High quality reusable optimizer\n",
+    "\n",
+    "The following is like a configured preset (you can supply it to many contractions, it will only run for each once), and a good starting point for high quality contractions:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "id": "aefc22a2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "opt = ctg.ReusableHyperOptimizer(\n",
+    "    # turn on subtree reconfiguration\n",
+    "    reconf_opts={},\n",
+    "    # target hardware relevant FLOPS + MOPS cost\n",
+    "    minimize=\"combo\",\n",
+    "    # only spend time on hard contractions\n",
+    "    max_time=\"rate:1e9\",\n",
+    "    # hash contraction up to index permutation, for maximum reuse\n",
+    "    hash_method=\"b\",\n",
+    "    # cmaes is a good balance between speed and quality\n",
+    "    optlib=\"cmaes\",\n",
+    "    # store contractions on disk\n",
+    "    directory=True,\n",
+    "    # turn this on to see live progress each contraction\n",
+    "    progbar=False,\n",
+    ")"
    ]
   },
   {
@@ -654,7 +691,7 @@
    "id": "4dfeec6c",
    "metadata": {},
    "source": [
-    "### High quality sliced optimizer\n",
+    "### High quality sliced single optimizer\n",
     "\n",
     "The following is an example of a high quality optimizer you might use to search\n",
     "for a single contraction, where you are memory bound to width $W=30$ and thus\n",
@@ -663,7 +700,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 21,
    "id": "e9a47175",
    "metadata": {},
    "outputs": [],
@@ -687,8 +724,7 @@
    "id": "2d98d65b",
    "metadata": {},
    "source": [
-    "* Everytime you supply this optimizer instance it will *continue* its search, so you\n",
-    "can interactively run it until you are happy or it seems to have converged.\n",
+    "* Everytime you supply this optimizer instance it will *continue* its search, so you can interactively run it until you are happy or it seems to have converged. See the visualization page for various ways to inpsect progress.\n",
     "\n",
     "* While a few hundred runs is usually sufficient when no slicing is needed, very large contractions requiring heavy slicing might benefit from a few thousand runs."
    ]
@@ -708,7 +744,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 22,
    "id": "1a9b54ea",
    "metadata": {},
    "outputs": [],
@@ -723,10 +759,10 @@
     "    # just uniformly sample the space\n",
     "    optlib=\"random\",\n",
     "    # terminate search if contraction is cheap\n",
-    "    max_time=\"rate:1e6\",\n",
+    "    max_time=\"rate:1e9\",\n",
     "    # account for both flops and write - usually wise for practical performance\n",
     "    minimize=\"combo-64\",\n",
-    "    # persist paths found in here\n",
+    "    # persist paths found in a specific directory\n",
     "    directory=\"cotengra_cache_eco\",\n",
     ")"
    ]
@@ -741,7 +777,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 23,
    "id": "c51ead4e",
    "metadata": {},
    "outputs": [],
@@ -751,7 +787,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 24,
    "id": "70a1551d-7a15-4f68-b250-79f789a0a095",
    "metadata": {},
    "outputs": [],
