update docs again

--- a/docs/basics.ipynb
+++ b/docs/basics.ipynb
@@ -663,7 +663,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
    "id": "aefc22a2",
    "metadata": {},
    "outputs": [],
@@ -671,7 +671,7 @@
     "opt = ctg.ReusableHyperOptimizer(\n",
     "    # turn on subtree reconfiguration\n",
     "    reconf_opts={},\n",
-    "    # target hardware relevant FLOPS + MOPS cost\n",
+    "    # account for both flops and write - usually wise for practical performance\n",
     "    minimize=\"combo\",\n",
     "    # only spend time on hard contractions\n",
     "    max_time=\"rate:1e9\",\n",
@@ -691,7 +691,7 @@
    "id": "4dfeec6c",
    "metadata": {},
    "source": [
-    "### High quality sliced single optimizer\n",
+    "### Very high quality sliced single optimizer\n",
     "\n",
     "The following is an example of a high quality optimizer you might use to search\n",
     "for a single contraction, where you are memory bound to width $W=30$ and thus\n",
@@ -700,7 +700,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": null,
    "id": "e9a47175",
    "metadata": {},
    "outputs": [],
@@ -726,7 +726,9 @@
    "source": [
     "* Everytime you supply this optimizer instance it will *continue* its search, so you can interactively run it until you are happy or it seems to have converged. See the visualization page for various ways to inpsect progress.\n",
     "\n",
-    "* While a few hundred runs is usually sufficient when no slicing is needed, very large contractions requiring heavy slicing might benefit from a few thousand runs."
+    "* While a few hundred runs is usually sufficient when no slicing is needed, very large contractions requiring heavy slicing might benefit from a few thousand runs.\n",
+    "\n",
+    "* For some contractions, swapping `slicing_reconf_opts` ('dynamic slicing') to `simulated_annealing_opts` can provide better paths - see the advaced configuration page."
    ]
   },
   {
@@ -744,7 +746,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": null,
    "id": "1a9b54ea",
    "metadata": {},
    "outputs": [],
@@ -761,7 +763,7 @@
     "    # terminate search if contraction is cheap\n",
     "    max_time=\"rate:1e9\",\n",
     "    # account for both flops and write - usually wise for practical performance\n",
-    "    minimize=\"combo-64\",\n",
+    "    minimize=\"combo\",\n",
     "    # persist paths found in a specific directory\n",
     "    directory=\"cotengra_cache_eco\",\n",
     ")"
