add more edge_path support

--- a/docs/high-level-interface.ipynb
+++ b/docs/high-level-interface.ipynb
@@ -54,7 +54,8 @@
     "- ``str`` : a preset such as ``'auto'``, ``'auto-hq'``, ``'greedy'`` or ``'optimal'``\n",
     "- ``PathOptimizer`` : a custom optimizer from ``cotengra`` or ``opt_einsum``\n",
     "- ``ContractionTree`` : a contraction tree generated previously\n",
-    "- ``Sequence[tuple[int]]`` : an explicit path, specified manually or generated previously\n",
+    "- ``Sequence[tuple[int]]`` : an explicit path of *'linear recycled ids'*, specified manually or generated previously\n",
+    "- ``Sequence[str]`` : an explicit path supplied as an *edge ordering*\n",
     "\n",
     "If the method provides sliced indices then the contraction will utilize these to reduce the memory. The default is the `cotengra` preset ``'auto'``. If you explicitly want to use an `opt_einsum` preset then you can supply ``optimize='opt_einsum:auto'`` for example.\n",
     "\n",
