ruff format imports

--- a/examples/Quantum Circuit Example Old.ipynb
+++ b/examples/Quantum Circuit Example Old.ipynb
@@ -18,6 +18,7 @@
    "outputs": [],
    "source": [
     "import quimb.tensor as qtn\n",
+    "\n",
     "import cotengra as ctg"
    ]
   },
@@ -33,7 +34,8 @@
     "\n",
     "%matplotlib inline\n",
     "import matplotlib as mpl\n",
-    "mpl.rcParams['figure.dpi'] = 200"
+    "\n",
+    "mpl.rcParams[\"figure.dpi\"] = 200"
    ]
   },
   {
@@ -52,21 +54,16 @@
    "outputs": [],
    "source": [
     "def load_circuit(\n",
-    "    n=53,\n",
-    "    depth=10,\n",
-    "    seed=0 ,\n",
-    "    elided=0,\n",
-    "    sequence='ABCDCDAB',\n",
-    "    swap_trick=False\n",
+    "    n=53, depth=10, seed=0, elided=0, sequence=\"ABCDCDAB\", swap_trick=False\n",
     "):\n",
-    "    file = f'circuit_n{n}_m{depth}_s{seed}_e{elided}_p{sequence}.qsim'\n",
+    "    file = f\"circuit_n{n}_m{depth}_s{seed}_e{elided}_p{sequence}.qsim\"\n",
     "\n",
     "    if swap_trick:\n",
-    "        gate_opts={'contract': 'swap-split-gate', 'max_bond': 2}  \n",
+    "        gate_opts = {\"contract\": \"swap-split-gate\", \"max_bond\": 2}\n",
     "    else:\n",
-    "        gate_opts={}\n",
-    "    \n",
-    "    # instantiate the `Circuit` object that \n",
+    "        gate_opts = {}\n",
+    "\n",
+    "    # instantiate the `Circuit` object that\n",
     "    # constructs the initial tensor network:\n",
     "    return qtn.Circuit.from_qasm_file(file, gate_opts=gate_opts)"
    ]
@@ -85,7 +82,7 @@
    "outputs": [],
    "source": [
     "circ = load_circuit(depth=10)\n",
-    "psi_f = qtn.MPS_computational_state('0' * (circ.N))\n",
+    "psi_f = qtn.MPS_computational_state(\"0\" * (circ.N))\n",
     "tn = circ.psi & psi_f\n",
     "output_inds = []"
    ]
@@ -143,7 +140,7 @@
    "source": [
     "# inplace full simplify and cast to single precision\n",
     "tn.full_simplify_(output_inds=output_inds)\n",
-    "tn.astype_('complex64')"
+    "tn.astype_(\"complex64\")"
    ]
   },
   {
@@ -170,7 +167,13 @@
     }
    ],
    "source": [
-    "tn.graph(initial_layout='kamada_kawai', iterations=10, color=circ.psi.site_tags, legend=False, figsize=(3, 3))"
+    "tn.graph(\n",
+    "    initial_layout=\"kamada_kawai\",\n",
+    "    iterations=10,\n",
+    "    color=circ.psi.site_tags,\n",
+    "    legend=False,\n",
+    "    figsize=(3, 3),\n",
+    ")"
    ]
   },
   {
@@ -196,11 +199,11 @@
    ],
    "source": [
     "opt = ctg.HyperOptimizer(\n",
-    "    methods=['kahypar', 'greedy', 'walktrap'],\n",
+    "    methods=[\"kahypar\", \"greedy\", \"walktrap\"],\n",
     "    max_repeats=128,\n",
     "    progbar=True,\n",
-    "    minimize='flops',\n",
-    "    score_compression=0.5,  # deliberately make the optimizer try many methods \n",
+    "    minimize=\"flops\",\n",
+    "    score_compression=0.5,  # deliberately make the optimizer try many methods\n",
     ")"
    ]
   },
@@ -225,7 +228,7 @@
     }
    ],
    "source": [
-    "info = tn.contract(all, optimize=opt, get='path-info')"
+    "info = tn.contract(all, optimize=opt, get=\"path-info\")"
    ]
   },
   {
@@ -317,7 +320,7 @@
    ],
    "source": [
     "tree = opt.get_tree()\n",
-    "tree.plot_ring(node_scale= 1 / 3, edge_scale=2 / 3)"
+    "tree.plot_ring(node_scale=1 / 3, edge_scale=2 / 3)"
    ]
   },
   {
@@ -406,7 +409,7 @@
    ],
    "source": [
     "%%timeit\n",
-    "tn.contract(all, optimize=opt.path, backend='jax')"
+    "tn.contract(all, optimize=opt.path, backend=\"jax\")"
    ]
   },
   {
@@ -433,8 +436,8 @@
     }
    ],
    "source": [
-    "tn = (circ.psi & qtn.MPS_rand_computational_state(circ.N, seed=42))\n",
-    "tn.full_simplify_().astype_('complex64')"
+    "tn = circ.psi & qtn.MPS_rand_computational_state(circ.N, seed=42)\n",
+    "tn.full_simplify_().astype_(\"complex64\")"
    ]
   },
   {
@@ -463,7 +466,7 @@
    ],
    "source": [
     "%%time\n",
-    "tn.contract(all, optimize=opt.path, backend='jax')"
+    "tn.contract(all, optimize=opt.path, backend=\"jax\")"
    ]
   },
   {
@@ -492,7 +495,7 @@
    ],
    "source": [
     "%%time\n",
-    "tn.contract(all, optimize=opt.path, backend='jax')"
+    "tn.contract(all, optimize=opt.path, backend=\"jax\")"
    ]
   },
   {
@@ -527,10 +530,10 @@
    ],
    "source": [
     "circ = load_circuit(depth=12, swap_trick=True)\n",
-    "sampler = qtn.MPS_computational_state('0' * (circ.N))\n",
+    "sampler = qtn.MPS_computational_state(\"0\" * (circ.N))\n",
     "tn = circ.psi & sampler\n",
     "tn.full_simplify_(output_inds=[])\n",
-    "tn.astype_('complex64')"
+    "tn.astype_(\"complex64\")"
    ]
   },
   {
@@ -548,17 +551,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# we're going to help accelerate the optimizer search by restricting its search space, \n",
+    "# we're going to help accelerate the optimizer search by restricting its search space,\n",
     "# since highly balanced contraction trees generally slice best:\n",
-    "ctg.hyper._HYPER_SEARCH_SPACE['kahypar']['imbalance']['max'] = 0.1\n",
+    "ctg.hyper._HYPER_SEARCH_SPACE[\"kahypar\"][\"imbalance\"][\"max\"] = 0.1\n",
     "\n",
     "opt = ctg.HyperOptimizer(\n",
-    "    methods=['kahypar'],\n",
-    "    max_time=120,              # just search for 2 minutes\n",
+    "    methods=[\"kahypar\"],\n",
+    "    max_time=120,  # just search for 2 minutes\n",
     "    max_repeats=1000,\n",
     "    progbar=True,\n",
-    "    minimize='flops',\n",
-    "    slicing_opts={'target_size': 2**28}\n",
+    "    minimize=\"flops\",\n",
+    "    slicing_opts={\"target_size\": 2**28},\n",
     ")"
    ]
   },
@@ -577,7 +580,7 @@
    ],
    "source": [
     "# because of the hyperedges we need to specify no output indices\n",
-    "info = tn.contract(all, optimize=opt, get='path-info', output_inds=[])"
+    "info = tn.contract(all, optimize=opt, get=\"path-info\", output_inds=[])"
    ]
   },
   {
@@ -664,7 +667,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "sf.plot_slicings(color_scheme='plasma')"
+    "sf.plot_slicings(color_scheme=\"plasma\")"
    ]
   },
   {
@@ -685,7 +688,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "arrays = [t.data for t in tn] \n",
+    "arrays = [t.data for t in tn]\n",
     "sc = sf.SlicedContractor(arrays)"
    ]
   },
@@ -718,7 +721,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "backend = 'jax'"
+    "backend = \"jax\""
    ]
   },
   {
@@ -780,7 +783,7 @@
    "outputs": [],
    "source": [
     "tn = circ.psi & qtn.MPS_rand_computational_state(circ.N, seed=42)\n",
-    "tn.full_simplify_(output_inds=[]).astype_('complex64')"
+    "tn.full_simplify_(output_inds=[]).astype_(\"complex64\")"
    ]
   },
   {
@@ -793,7 +796,9 @@
     "sc.arrays = tuple(t.data for t in tn)\n",
     "\n",
     "# perform the contraction\n",
-    "sum(sc.contract_slice(i, backend=backend) for i in tqdm.tqdm(range(sc.nslices)))"
+    "sum(\n",
+    "    sc.contract_slice(i, backend=backend) for i in tqdm.tqdm(range(sc.nslices))\n",
+    ")"
    ]
   },
   {
@@ -824,7 +829,9 @@
     "sc.arrays = tuple(t.data for t in tn)\n",
     "\n",
     "# perform the contraction\n",
-    "sum(sc.contract_slice(i, backend=backend) for i in tqdm.tqdm(range(sc.nslices)))"
+    "sum(\n",
+    "    sc.contract_slice(i, backend=backend) for i in tqdm.tqdm(range(sc.nslices))\n",
+    ")"
    ]
   }
  ],
