--- a/docs/examples/ex_compressed_contraction.ipynb
+++ b/docs/examples/ex_compressed_contraction.ipynb
@@ -22,8 +22,9 @@
    "outputs": [],
    "source": [
     "%config InlineBackend.figure_formats = ['svg']\n",
-    "import cotengra as ctg\n",
-    "import quimb.tensor as qtn"
+    "import quimb.tensor as qtn\n",
+    "\n",
+    "import cotengra as ctg"
    ]
   },
   {
