--- a/docs/examples/ex_large_output_lazy.ipynb
+++ b/docs/examples/ex_large_output_lazy.ipynb
@@ -25,9 +25,10 @@
    "outputs": [],
    "source": [
     "%config InlineBackend.figure_formats = ['svg']\n",
-    "import cotengra as ctg\n",
     "import quimb.tensor as qtn\n",
-    "from autoray import do"
+    "from autoray import do\n",
+    "\n",
+    "import cotengra as ctg"
    ]
   },
   {
