add pixi formatting tasks

--- a/examples/Quantum Circuit Example Old.ipynb
+++ b/examples/Quantum Circuit Example Old.ipynb
@@ -2,16 +2,18 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "id": "88a252c0-f749-48dd-a738-c0066c8b0551",
    "metadata": {},
    "source": [
     "# Example Using Sycamore Quantum Circuit\n",
     "\n",
-    "Here we'll run through a more in-depth tensor contraction path finding, including all the different visualization options, by computing some amplitudes for random circuits on Google's Sycamore chip .  "
+    "Here we'll run through a more in-depth tensor contraction path finding, including all the different visualization options, by computing some amplitudes for random circuits on Google's Sycamore chip ."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 2,
+   "id": "d37a9dae-50ab-40f3-8c1a-d43cfb052865",
    "metadata": {
     "tags": []
    },
@@ -25,6 +27,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
+   "id": "2bd59ff7-c21a-484b-8edd-61b12eea95c8",
    "metadata": {
     "tags": []
    },
@@ -40,6 +43,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "7367699a-8433-422b-ba9f-3ebfc7db5329",
    "metadata": {},
    "source": [
     "Two Sycamore circuit definitions are included in this repository, the first of which ($m=10$) should fit into memory, and the second of which ($m=12$) will require *slicing*."
@@ -48,6 +52,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
+   "id": "0c356526-48dd-441a-a56a-fa6892ecd98a",
    "metadata": {
     "tags": []
    },
@@ -70,6 +75,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "a2ee0921-ceb0-40b1-ab69-cb55aa3c520e",
    "metadata": {},
    "source": [
     "Make our target tensor network the overlap of the wavefunction with a bitstring:"
@@ -78,6 +84,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "527fba34-d800-4541-9ae7-513d119f56c0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -89,6 +96,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "9ca04bab-caa1-4809-86c2-2d19ce452c80",
    "metadata": {},
    "source": [
     "We can check out what the raw TN looks like:"
@@ -97,6 +105,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "984f99a3-fec8-40ba-b3f5-27462b9ec977",
    "metadata": {},
    "outputs": [
     {
@@ -116,6 +125,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "1f16d828-0aa2-425c-8921-7184d4b4fb62",
    "metadata": {},
    "source": [
     "As well as what it looks like after standard pre-processing:"
@@ -124,6 +134,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
+   "id": "88fbf5fa-bfb8-451d-b091-b3559fffac16",
    "metadata": {},
    "outputs": [
     {
@@ -145,6 +156,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "253596c5-0bc8-4869-a549-4874867adc62",
    "metadata": {},
    "source": [
     "The simplification uses some `numba` compiled functions which might slow things done first run."
@@ -153,6 +165,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
+   "id": "e413001e-9626-4ecd-94b7-cc01b7bdf104",
    "metadata": {},
    "outputs": [
     {
@@ -178,6 +191,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "92ca9cc8-a608-4233-97c0-8442c17b20ff",
    "metadata": {},
    "source": [
     "Now we're ready to try and find a contraction path (various initializiation options are illustrated - not necessarily the best):"
@@ -186,6 +200,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
+   "id": "1dfa13ed-7ce9-4bb0-875e-43dd48cdb8dc",
    "metadata": {},
    "outputs": [
     {
@@ -209,6 +224,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "edb14457-0707-4832-8ba0-f2619f56b2ee",
    "metadata": {},
    "source": [
     "The optimizer is stateful, so this following actual search call can be run repeatedly:"
@@ -217,6 +233,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
+   "id": "a72bf748-6bb5-4dd8-b7ff-3248976df874",
    "metadata": {},
    "outputs": [
     {
@@ -233,6 +250,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "380bd749-14f6-494f-988d-d39cbb632dcb",
    "metadata": {},
    "source": [
     "We can visualize the progress of the Bayesian optimizer like so:"
@@ -241,6 +259,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
+   "id": "8620236d-1f1b-4b58-a2fa-db1375c4ee50",
    "metadata": {},
    "outputs": [
     {
@@ -262,6 +281,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "e2526212-dd3f-48e7-bc51-8fae6fbb4152",
    "metadata": {},
    "source": [
     "Clearly the `kahypar` optimizer seems to be able to find the lowest cost contractions.\n",
@@ -272,6 +292,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
+   "id": "ad955a0e-5367-41be-9c42-f134edc30fde",
    "metadata": {},
    "outputs": [
     {
@@ -293,6 +314,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "75911137-ea3b-4e3c-beda-cf238e16823a",
    "metadata": {},
    "source": [
     "Where it becomes apparent, that while correlated, the minimum size contraction found is not necessarily the same as the minimum cost contraction found.\n",
@@ -303,6 +325,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
+   "id": "02846932-aad6-4fbe-bf68-f5ac5be5ce14",
    "metadata": {},
    "outputs": [
     {
@@ -325,6 +348,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "e492f9d2-d2f4-4589-99ba-a4e0ceea5170",
    "metadata": {},
    "source": [
     "We can try and plot what this might look like on top of the TN graph arranged properly, though its likely messy..."
@@ -333,6 +357,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
+   "id": "778ef6d8-c857-4460-b0a3-094b56ad1298",
    "metadata": {},
    "outputs": [
     {
@@ -354,6 +379,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "f9c45e91-9b4c-4233-b652-ac710983edd1",
    "metadata": {},
    "source": [
     "We can see that the contraction found is imbalanced, with small tensors being steadily absorbed into one big tensor.\n",
@@ -364,6 +390,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
+   "id": "c2e523d1-9931-4f52-8444-d447c6d9f64d",
    "metadata": {},
    "outputs": [
     {
@@ -385,6 +412,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "602f27c5-bd17-47db-8b1b-b438f34bc8a0",
    "metadata": {},
    "source": [
     "Here, 'peak-size' is the memory required for both inputs and the output of each contraction.\n",
@@ -397,6 +425,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
+   "id": "71143de1-c45d-4623-b9f6-66a620cbff0a",
    "metadata": {},
    "outputs": [
     {
@@ -414,6 +443,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "9ae73fe3-356f-4a42-96e4-2cc636503c84",
    "metadata": {},
    "source": [
     "TN construction and simplification is determinstic in `quimb` so at least in this case we can easily evaluate another amplitude with the same contraction tree:"
@@ -422,6 +452,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
+   "id": "19ba62e6-3796-4cc4-83ee-cb21a0d4e7bf",
    "metadata": {},
    "outputs": [
     {
@@ -443,6 +474,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
+   "id": "116262d7-bdd4-4c02-ba25-09717cae55a8",
    "metadata": {},
    "outputs": [
     {
@@ -472,6 +504,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
+   "id": "0bed26c1-f767-4d5e-9785-1cc98f716f4e",
    "metadata": {},
    "outputs": [
     {
@@ -500,6 +533,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "bcbb6097-6131-4da1-b9d1-04b445b54014",
    "metadata": {},
    "source": [
     "# Searching for sliced contractions (Sycamore $m=12$)"
@@ -507,6 +541,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "8ad662f3-dfe0-44ea-b8c3-a9399cf5fdbb",
    "metadata": {},
    "source": [
     "To illustrate slicing we'll setup a (much harder!) depth 12 circuit. We'll perform a swapped rank-2 decomposition on the gates (for a not insignificant drop in total fidelity):"
@@ -515,6 +550,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
+   "id": "15c01d10-de82-44ae-ba25-8ce71a045be3",
    "metadata": {},
    "outputs": [
     {
@@ -538,16 +574,18 @@
   },
   {
    "cell_type": "markdown",
+   "id": "673c3151-651b-4e96-9ef9-de61969525e1",
    "metadata": {},
    "source": [
     "Because of the rank-2 swapped gate decomposition the full simplify function has now found hyperedge introducing diagonal reductions (which is why there are more tensors than indices).\n",
     "\n",
-    "Now when we intialize the hyper optimizer we'll tell it slice each contraction before reporting the cost and size. "
+    "Now when we intialize the hyper optimizer we'll tell it slice each contraction before reporting the cost and size."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 19,
+   "id": "4dfe83ad-1537-46c1-97dc-44da03395e2f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -568,6 +606,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "cdcd61b8-05a3-4348-a09f-d68ece76e531",
    "metadata": {},
    "outputs": [
     {
@@ -585,9 +624,10 @@
   },
   {
    "cell_type": "markdown",
+   "id": "e21d52ee-8eae-48fe-a4b2-d92c7c7078df",
    "metadata": {},
    "source": [
-    "Sliced contractions can be more difficult to find, if performance is critical its worth running this for longer, maybe with a large parallel pool supplied to the `parallel=` kwarg. \n",
+    "Sliced contractions can be more difficult to find, if performance is critical its worth running this for longer, maybe with a large parallel pool supplied to the `parallel=` kwarg.\n",
     "\n",
     "We can see that all the contractions are now 'size 28' however:"
    ]
@@ -595,6 +635,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "b1d04c20-d4c9-4402-89a1-79ca59595ba5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -603,6 +644,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "1684a1f4-ebee-4897-a33c-aced123b6f98",
    "metadata": {},
    "source": [
     "We can check what this new contraction tree looks like:"
@@ -611,6 +653,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "73920b43-af31-4b94-b9ab-035de9eeef0c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -620,6 +663,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "32101f83-9c2f-4198-a6f2-ab1236ff15d7",
    "metadata": {},
    "source": [
     "As enforced, its now somewhat more balanced than the $m=10$ tree.\n",
@@ -630,6 +674,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "8aac170a-b094-417d-ad2f-33866910bc82",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -638,6 +683,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "23e4eb75-bdcc-472c-b3d5-053201dea12f",
    "metadata": {},
    "source": [
     "We can do quite thorough search with different levels of exploration:"
@@ -646,6 +692,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "254e6d62-cc59-4566-999b-394e23eae623",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -656,6 +703,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "87171e7d-2acd-410a-820e-e849bc50c2f7",
    "metadata": {},
    "source": [
     "We can also visualise what effect the slicing has had on the total cost (left - starting point, further to the right equals more sliced):"
@@ -664,6 +712,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "ad693ecd-0e31-44ae-811a-c44f97837d00",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -672,6 +721,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "e593e4a8-3996-4bdb-a2e6-422279a31d1e",
    "metadata": {},
    "source": [
     "Here there seems to have been very little theoretical overhead introduced by the slicing, *for this path*. The real slicing overhead is the increase in FLOPs in comparison to best unsliced path (likely v different).\n",
@@ -685,6 +735,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "de8fa298-1959-4fa6-95ac-9c7008f5319c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -694,6 +745,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "23be13a1-ac58-4943-a200-915b3dd7e9b7",
    "metadata": {},
    "source": [
     "Or we could translate the opt_einsum symbols back into `quimb` indices to handle the contractions in tensor network form (and use ``.cut_iter``)."
@@ -702,6 +754,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "837c1f37-87e9-4ff4-aae2-2d748e5a5148",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -710,6 +763,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "8e39b604-f589-47cb-a162-e43a5bddd600",
    "metadata": {},
    "source": [
     "The first time a contraction is run by `jax` with a particular shape its compiled, which can take a few seconds:"
@@ -718,6 +772,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "77455eca-37f0-4bdf-9ec1-d74ff98f0468",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -727,6 +782,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "492ef8f3-c323-41bd-b615-dab9a1245211",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -736,6 +792,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "0995cb9e-223d-4929-8d26-ac173221e174",
    "metadata": {},
    "source": [
     "However, the sliced contraction stores the compiled expression and reuses it for each slice:"
@@ -744,6 +801,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "2c940ffa-bad5-4d7f-8bf1-fec8d7d4b0e8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -753,6 +811,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "756acd2f-b272-49dd-8650-3d425ed23204",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -763,6 +822,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "85f71dc4-376a-4a6c-90a8-7fa64444de76",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -771,6 +831,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "2cd93e70-6415-4871-88bd-35ee5a2dd910",
    "metadata": {},
    "source": [
     "Again, the TN manipulations are deterministic so we can re-use everything:"
@@ -779,6 +840,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "97d99d73-0e2a-427d-bad9-a242740874f9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -789,6 +851,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "3394b451-468b-47a4-b894-750814585810",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -804,6 +867,7 @@
   {
    "cell_type": "code",
    "execution_count": 50,
+   "id": "7a583589-712f-48c7-8bad-c3dae42ecc3b",
    "metadata": {},
    "outputs": [
     {
@@ -837,9 +901,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [conda env:numpy]",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "conda-env-numpy-py"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -851,7 +915,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.9"
+   "version": "3"
   }
  },
  "nbformat": 4,
